add the newsletter and tracking

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,9 @@
       <!-- End Facebook Pixel Code -->
       <script src='{{ site.url }}/js/jquery.min.js'></script>
 
+      <!-- AWeber Tracking Code -->
+      <script type="text/javascript" src="//analytics.aweber.com/js/awt_analytics.js?id=1CA0c"></script>
+
     </head>
     <body>
     <div id="fb-root"></div>
