--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,16 @@
       <!-- AWeber Tracking Code -->
       <script type="text/javascript" src="//analytics.aweber.com/js/awt_analytics.js?id=1CA0c"></script>
 
+      <!-- Global site tag (gtag.js) - Google Ads: 1054116853 -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1054116853"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-1054116853');
+      </script>
+
     </head>
     <body>
     <div id="fb-root"></div>
